--- a/assets/new_tab_page.html
+++ b/assets/new_tab_page.html
@@ -105,10 +105,6 @@
 
     }
 
-    div.row div a:hover span {
-      /*background-color: #FCFCFC; */
-    }
-
     div.row div a.special:hover span {
       /*background-color: rgba(225, 220, 255, 0.3); */
       color: white;
@@ -124,6 +120,7 @@
   <h1><img src="logo.png" width="300" /></h1>
   <div id="wrap">
     <div class="row">
+      <div><a class="special" href="file:///downloads.html"><span>Downloads</span></a></div>
       <div><a class="special" href="file:///release_notes.html"><span>Release Notes</span></a></div>
       <div><a href="https://en.wikipedia.com"><span>Wikipedia</span></a></div>
       <div><a href="https://news.ycombinator.com"><span>Hacker News</span></a></div>
