--- a/assets/downloads.html
+++ b/assets/downloads.html
@@ -16,17 +16,26 @@
             color-scheme: light dark;
         }
 
+        html,
+        body {
+            height: 100%;
+            overflow-x: hidden;
+            overflow-y: auto !important;
+        }
+
         body {
             margin: 0;
             font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
             background: var(--bg, #f6f7f9);
             color: var(--fg, #111);
+            min-height: 100vh;
         }
 
         .container {
             max-width: 960px;
             margin: 32px auto;
-            padding: 0 16px;
+            padding: 0 16px 48px;
+            overflow: visible !important;
         }
 
         header {
@@ -263,7 +272,7 @@
 
                 card.appendChild(meta);
 
-                if (item.status === 'in-progress') {
+                if (item.status === 'in-progress' || item.status === 'requested') {
                     const progress = document.createElement('div');
                     progress.className = 'progress';
                     const bar = document.createElement('span');
