--- a/assets/ui.html
+++ b/assets/ui.html
@@ -75,7 +75,7 @@
         </span>
         <span id="toggle-downloads" class="icon" title="Downloads">
             <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
-                <path d="M5 20h14v-2H5v2zm7-16l-5 6h3v6h4v-6h3l-5-6z" fill="currentColor" />
+                <path d="M5 20h14v-2H5v2zm7-17v10.17l3.59-3.58L17 11l-5 5-5-5 1.41-1.41L11 13.17V3h2z" fill="currentColor" />
             </svg>
             <span id="downloads-badge" class="downloads-badge"></span>
         </span>
