--- a/assets/ui.html
+++ b/assets/ui.html
@@ -67,20 +67,23 @@
                 <use xlink:href="#svg_tools" />
             </svg>
         </span>
-        <span id="toggle-adblock" class="icon" title="Toggle Ad/Tracker Blocking">
+        <span id="toggle-adblock" class="icon" role="button" tabindex="0" aria-pressed="true"
+            aria-label="Toggle ad blocking" data-tooltip="Adblock">
             <!-- simple shield icon -->
             <svg viewBox="0 0 24 24" width="18" height="18">
                 <path d="M12 2l7 3v5c0 5-3.4 9.7-7 11-3.6-1.3-7-6-7-11V5l7-3z" fill="currentColor" />
             </svg>
         </span>
-        <span id="toggle-downloads" class="icon" title="Downloads">
+        <span id="toggle-downloads" class="icon" role="button" tabindex="0" aria-label="View downloads"
+            data-tooltip="Downloads">
             <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
                 <path d="M12 21l-6-6h4V3h4v12h4l-6 6z" fill="currentColor" />
             </svg>
             <span id="downloads-badge" class="downloads-badge"></span>
         </span>
         <!-- Overflow menu (three dots) -->
-        <span id="toggle-menu" class="icon" title="Customize and control">
+        <span id="toggle-menu" class="icon" role="button" tabindex="0" aria-label="Open settings menu"
+            aria-haspopup="true" data-tooltip="Settings">
             <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
                 <circle cx="5" cy="12" r="2" fill="currentColor"></circle>
                 <circle cx="12" cy="12" r="2" fill="currentColor"></circle>
@@ -143,12 +146,44 @@
             document.querySelector('#stop').addEventListener('click', event => OnStop());
             document.querySelector('#toggle-tools').addEventListener('click', event => OnToggleTools());
             const abBtn = document.querySelector('#toggle-adblock');
-            if (abBtn) abBtn.addEventListener('click', event => { if (window.OnToggleAdblock) OnToggleAdblock(); });
+            if (abBtn) {
+                const toggleAdblock = () => { if (window.OnToggleAdblock) OnToggleAdblock(); };
+                abBtn.addEventListener('click', event => {
+                    event.stopPropagation();
+                    toggleAdblock();
+                });
+                abBtn.addEventListener('keydown', event => {
+                    if (event.key === 'Enter' || event.key === ' ') {
+                        event.preventDefault();
+                        toggleAdblock();
+                    }
+                });
+                try {
+                    if (typeof GetAdblockEnabled === 'function') {
+                        updateAdblockEnabled(!!GetAdblockEnabled());
+                    } else {
+                        updateAdblockEnabled(true);
+                    }
+                } catch (e) {
+                    updateAdblockEnabled(true);
+                }
+            }
             const downloadsBtn = document.querySelector('#toggle-downloads');
-            if (downloadsBtn) downloadsBtn.addEventListener('click', event => {
-                event.stopPropagation();
-                if (window.OnDownloadsOverlayToggle) OnDownloadsOverlayToggle();
-            });
+            if (downloadsBtn) {
+                const toggleDownloads = () => {
+                    if (window.OnDownloadsOverlayToggle) OnDownloadsOverlayToggle();
+                };
+                downloadsBtn.addEventListener('click', event => {
+                    event.stopPropagation();
+                    toggleDownloads();
+                });
+                downloadsBtn.addEventListener('keydown', event => {
+                    if (event.key === 'Enter' || event.key === ' ') {
+                        event.preventDefault();
+                        toggleDownloads();
+                    }
+                });
+            }
             var address = document.querySelector('#address');
             address.onkeypress = (function (e) {
                 if (e.which == '13') {
@@ -278,9 +313,11 @@
 
             function openMenu() {
                 // Use native overlay instead of inline dropdown
+                if (toggleBtn) toggleBtn.setAttribute('aria-expanded', 'true');
                 if (window.OnMenuOpen) OnMenuOpen();
             }
             function closeMenu() {
+                if (toggleBtn) toggleBtn.setAttribute('aria-expanded', 'false');
                 if (window.OnMenuClose) OnMenuClose();
             }
             function isMenuOpen() {
@@ -288,9 +325,16 @@
             }
 
             if (toggleBtn) {
+                toggleBtn.setAttribute('aria-expanded', 'false');
                 toggleBtn.addEventListener('click', (e) => {
                     e.stopPropagation();
                     openMenu();
+                });
+                toggleBtn.addEventListener('keydown', (e) => {
+                    if (e.key === 'Enter' || e.key === ' ') {
+                        e.preventDefault();
+                        openMenu();
+                    }
                 });
             }
 
@@ -348,6 +392,65 @@
             window.__ul_update_downloads_badge = updateBadge;
             updateBadge();
             setInterval(updateBadge, 2000);
+        })();
+
+        (function initToolbarTooltips() {
+            const targets = document.querySelectorAll('[data-tooltip]');
+            if (!targets || !targets.length) return;
+            const tooltip = document.createElement('div');
+            tooltip.id = 'toolbar-tooltip';
+            tooltip.className = 'toolbar-tooltip';
+            tooltip.setAttribute('role', 'tooltip');
+            document.body.appendChild(tooltip);
+
+            let hideTimer = null;
+
+            function positionTooltip(target) {
+                if (!target) return;
+                const rect = target.getBoundingClientRect();
+                const centerX = rect.left + rect.width / 2;
+                const clampedX = Math.min(window.innerWidth - 12, Math.max(12, centerX));
+                const desiredTop = rect.bottom + 10;
+                const clampedTop = Math.min(window.innerHeight - 12, Math.max(10, desiredTop));
+                tooltip.style.left = Math.round(clampedX) + 'px';
+                tooltip.style.top = Math.round(clampedTop) + 'px';
+            }
+
+            function show(target) {
+                if (!target) return;
+                if (hideTimer) {
+                    clearTimeout(hideTimer);
+                    hideTimer = null;
+                }
+                const text = target.getAttribute('data-tooltip');
+                if (!text) return;
+                tooltip.textContent = text;
+                positionTooltip(target);
+                tooltip.classList.add('visible');
+            }
+
+            function hide(immediate) {
+                if (hideTimer) {
+                    clearTimeout(hideTimer);
+                    hideTimer = null;
+                }
+                if (immediate) {
+                    tooltip.classList.remove('visible');
+                    return;
+                }
+                hideTimer = setTimeout(() => tooltip.classList.remove('visible'), 100);
+            }
+
+            targets.forEach(target => {
+                target.addEventListener('mouseenter', () => show(target));
+                target.addEventListener('mouseleave', () => hide(false));
+                target.addEventListener('focus', () => show(target));
+                target.addEventListener('blur', () => hide(false));
+            });
+
+            document.addEventListener('mousedown', () => hide(true));
+            window.addEventListener('scroll', () => hide(true));
+            window.addEventListener('resize', () => hide(true));
         })();
     </script>
 </body>
