--- a/assets/ui.html
+++ b/assets/ui.html
@@ -62,7 +62,7 @@
         <input onfocus="select_next_mouseup = true;"
             onmouseup="if (select_next_mouseup) this.select(); select_next_mouseup = false;" type="text"
             id="address"></input>
-        <span id="toggle-tools" class="icon">
+        <span id="toggle-tools" class="icon" role="button" tabindex="0" aria-label="Toggle inspector" data-tooltip="Inspector">
             <svg viewBox="0 0 24 24" width="18" height="18">
                 <use xlink:href="#svg_tools" />
             </svg>
@@ -82,8 +82,8 @@
             <span id="downloads-badge" class="downloads-badge"></span>
         </span>
         <!-- Overflow menu (three dots) -->
-        <span id="toggle-menu" class="icon" role="button" tabindex="0" aria-label="Open settings menu"
-            aria-haspopup="true" data-tooltip="Settings">
+        <span id="toggle-menu" class="icon" role="button" tabindex="0" aria-label="Open menu"
+            aria-haspopup="true" data-tooltip="Menu">
             <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
                 <circle cx="5" cy="12" r="2" fill="currentColor"></circle>
                 <circle cx="12" cy="12" r="2" fill="currentColor"></circle>
@@ -144,7 +144,20 @@
             document.querySelector('#forward').addEventListener('click', event => OnForward());
             document.querySelector('#refresh').addEventListener('click', event => OnRefresh());
             document.querySelector('#stop').addEventListener('click', event => OnStop());
-            document.querySelector('#toggle-tools').addEventListener('click', event => OnToggleTools());
+            const inspectorBtn = document.querySelector('#toggle-tools');
+            if (inspectorBtn) {
+                const toggleInspector = () => { if (window.OnToggleTools) OnToggleTools(); };
+                inspectorBtn.addEventListener('click', event => {
+                    event.stopPropagation();
+                    toggleInspector();
+                });
+                inspectorBtn.addEventListener('keydown', event => {
+                    if (event.key === 'Enter' || event.key === ' ') {
+                        event.preventDefault();
+                        toggleInspector();
+                    }
+                });
+            }
             const abBtn = document.querySelector('#toggle-adblock');
             if (abBtn) {
                 const toggleAdblock = () => { if (window.OnToggleAdblock) OnToggleAdblock(); };
@@ -401,20 +414,11 @@
             tooltip.id = 'toolbar-tooltip';
             tooltip.className = 'toolbar-tooltip';
             tooltip.setAttribute('role', 'tooltip');
+            tooltip.style.visibility = 'hidden';
             document.body.appendChild(tooltip);
 
             let hideTimer = null;
-
-            function positionTooltip(target) {
-                if (!target) return;
-                const rect = target.getBoundingClientRect();
-                const centerX = rect.left + rect.width / 2;
-                const clampedX = Math.min(window.innerWidth - 12, Math.max(12, centerX));
-                const desiredTop = rect.bottom + 10;
-                const clampedTop = Math.min(window.innerHeight - 12, Math.max(10, desiredTop));
-                tooltip.style.left = Math.round(clampedX) + 'px';
-                tooltip.style.top = Math.round(clampedTop) + 'px';
-            }
+            let currentTarget = null;
 
             function show(target) {
                 if (!target) return;
@@ -424,9 +428,33 @@
                 }
                 const text = target.getAttribute('data-tooltip');
                 if (!text) return;
+                currentTarget = target;
                 tooltip.textContent = text;
-                positionTooltip(target);
+                tooltip.classList.remove('below');
                 tooltip.classList.add('visible');
+                tooltip.style.visibility = 'hidden';
+
+                requestAnimationFrame(() => {
+                    if (currentTarget !== target) return;
+                    const rect = target.getBoundingClientRect();
+                    const centerX = rect.left + rect.width / 2;
+                    const clampedX = Math.min(window.innerWidth - 12, Math.max(12, centerX));
+                    tooltip.style.left = Math.round(clampedX) + 'px';
+
+                    const tipRect = tooltip.getBoundingClientRect();
+                    let top = rect.top - tipRect.height - 10;
+                    let placeBelow = false;
+                    if (top < 6) {
+                        top = rect.bottom + 10;
+                        placeBelow = true;
+                    }
+                    if (placeBelow && top + tipRect.height > window.innerHeight - 6) {
+                        top = Math.max(6, window.innerHeight - tipRect.height - 6);
+                    }
+                    tooltip.classList.toggle('below', placeBelow);
+                    tooltip.style.top = Math.round(top) + 'px';
+                    tooltip.style.visibility = 'visible';
+                });
             }
 
             function hide(immediate) {
@@ -434,11 +462,17 @@
                     clearTimeout(hideTimer);
                     hideTimer = null;
                 }
-                if (immediate) {
+                const finish = () => {
+                    currentTarget = null;
                     tooltip.classList.remove('visible');
+                    tooltip.classList.remove('below');
+                    tooltip.style.visibility = 'hidden';
+                };
+                if (immediate) {
+                    finish();
                     return;
                 }
-                hideTimer = setTimeout(() => tooltip.classList.remove('visible'), 100);
+                hideTimer = setTimeout(finish, 100);
             }
 
             targets.forEach(target => {
