Add settings panel and menu option
Introduces a new settings panel (settings-panel.html) with configurable browser options and UI. Updates menu.html to include a 'Settings' menu item and handler to open the settings panel.

--- a/assets/menu.html
+++ b/assets/menu.html
@@ -37,6 +37,7 @@
             <div class="menu-separator"></div>
             <div class="menu-item" data-action="history">History [Ctrl+H]</div>
             <div class="menu-item" data-action="downloads">Downloads</div>
+            <div class="menu-item" data-action="settings">Settings</div>
         </div>
     </div>
 
@@ -92,6 +93,9 @@
                         break;
                     case 'downloads':
                         if (window.OnOpenDownloadsNewTab) OnOpenDownloadsNewTab();
+                        break;
+                    case 'settings':
+                        if (window.OnOpenSettingsPanel) OnOpenSettingsPanel();
                         break;
                 }
                 closeMenu();
